커버링 인덱스 조회 성능 개선 & 캐싱 적용 #14